--- a/file1.ipynb
+++ b/file1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "id": "111a6ea8",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "id": "41444b92",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 36,
    "id": "b87a4828",
    "metadata": {},
    "outputs": [],
@@ -34,39 +34,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "903c95f7",
+   "execution_count": null,
+   "id": "a5788948",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ProgrammingError",
+     "evalue": "(1007, \"Can't create database 'employee_project'; database exists\")",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mProgrammingError\u001b[39m                          Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[40]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      3\u001b[39m qur=\u001b[33m'\u001b[39m\u001b[33mCREATE DATABASE employee_project\u001b[39m\u001b[33m'\u001b[39m\n\u001b[32m      4\u001b[39m mycur=conn.cursor()\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m \u001b[43mmycur\u001b[49m\u001b[43m.\u001b[49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[43mqur\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      6\u001b[39m mycur.close()\n\u001b[32m      7\u001b[39m conn.close()\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\hp\\anaconda3\\envs\\empenv\\Lib\\site-packages\\pymysql\\cursors.py:153\u001b[39m, in \u001b[36mCursor.execute\u001b[39m\u001b[34m(self, query, args)\u001b[39m\n\u001b[32m    149\u001b[39m     \u001b[38;5;28;01mpass\u001b[39;00m\n\u001b[32m    151\u001b[39m query = \u001b[38;5;28mself\u001b[39m.mogrify(query, args)\n\u001b[32m--> \u001b[39m\u001b[32m153\u001b[39m result = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_query\u001b[49m\u001b[43m(\u001b[49m\u001b[43mquery\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    154\u001b[39m \u001b[38;5;28mself\u001b[39m._executed = query\n\u001b[32m    155\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m result\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\hp\\anaconda3\\envs\\empenv\\Lib\\site-packages\\pymysql\\cursors.py:322\u001b[39m, in \u001b[36mCursor._query\u001b[39m\u001b[34m(self, q)\u001b[39m\n\u001b[32m    320\u001b[39m conn = \u001b[38;5;28mself\u001b[39m._get_db()\n\u001b[32m    321\u001b[39m \u001b[38;5;28mself\u001b[39m._clear_result()\n\u001b[32m--> \u001b[39m\u001b[32m322\u001b[39m \u001b[43mconn\u001b[49m\u001b[43m.\u001b[49m\u001b[43mquery\u001b[49m\u001b[43m(\u001b[49m\u001b[43mq\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    323\u001b[39m \u001b[38;5;28mself\u001b[39m._do_get_result()\n\u001b[32m    324\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m.rowcount\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\hp\\anaconda3\\envs\\empenv\\Lib\\site-packages\\pymysql\\connections.py:575\u001b[39m, in \u001b[36mConnection.query\u001b[39m\u001b[34m(self, sql, unbuffered)\u001b[39m\n\u001b[32m    573\u001b[39m     sql = sql.encode(\u001b[38;5;28mself\u001b[39m.encoding, \u001b[33m\"\u001b[39m\u001b[33msurrogateescape\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m    574\u001b[39m \u001b[38;5;28mself\u001b[39m._execute_command(COMMAND.COM_QUERY, sql)\n\u001b[32m--> \u001b[39m\u001b[32m575\u001b[39m \u001b[38;5;28mself\u001b[39m._affected_rows = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_read_query_result\u001b[49m\u001b[43m(\u001b[49m\u001b[43munbuffered\u001b[49m\u001b[43m=\u001b[49m\u001b[43munbuffered\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    576\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m._affected_rows\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\hp\\anaconda3\\envs\\empenv\\Lib\\site-packages\\pymysql\\connections.py:826\u001b[39m, in \u001b[36mConnection._read_query_result\u001b[39m\u001b[34m(self, unbuffered)\u001b[39m\n\u001b[32m    824\u001b[39m     result.init_unbuffered_query()\n\u001b[32m    825\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m826\u001b[39m     \u001b[43mresult\u001b[49m\u001b[43m.\u001b[49m\u001b[43mread\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    827\u001b[39m \u001b[38;5;28mself\u001b[39m._result = result\n\u001b[32m    828\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m result.server_status \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\hp\\anaconda3\\envs\\empenv\\Lib\\site-packages\\pymysql\\connections.py:1203\u001b[39m, in \u001b[36mMySQLResult.read\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m   1201\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mread\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[32m   1202\u001b[39m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m1203\u001b[39m         first_packet = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mconnection\u001b[49m\u001b[43m.\u001b[49m\u001b[43m_read_packet\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1205\u001b[39m         \u001b[38;5;28;01mif\u001b[39;00m first_packet.is_ok_packet():\n\u001b[32m   1206\u001b[39m             \u001b[38;5;28mself\u001b[39m._read_ok_packet(first_packet)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\hp\\anaconda3\\envs\\empenv\\Lib\\site-packages\\pymysql\\connections.py:782\u001b[39m, in \u001b[36mConnection._read_packet\u001b[39m\u001b[34m(self, packet_type)\u001b[39m\n\u001b[32m    780\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m._result \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mself\u001b[39m._result.unbuffered_active \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[32m    781\u001b[39m         \u001b[38;5;28mself\u001b[39m._result.unbuffered_active = \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m782\u001b[39m     \u001b[43mpacket\u001b[49m\u001b[43m.\u001b[49m\u001b[43mraise_for_error\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    783\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m packet\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\hp\\anaconda3\\envs\\empenv\\Lib\\site-packages\\pymysql\\protocol.py:219\u001b[39m, in \u001b[36mMysqlPacket.raise_for_error\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m    217\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m DEBUG:\n\u001b[32m    218\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33merrno =\u001b[39m\u001b[33m\"\u001b[39m, errno)\n\u001b[32m--> \u001b[39m\u001b[32m219\u001b[39m \u001b[43merr\u001b[49m\u001b[43m.\u001b[49m\u001b[43mraise_mysql_exception\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_data\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\hp\\anaconda3\\envs\\empenv\\Lib\\site-packages\\pymysql\\err.py:150\u001b[39m, in \u001b[36mraise_mysql_exception\u001b[39m\u001b[34m(data)\u001b[39m\n\u001b[32m    148\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m errorclass \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m    149\u001b[39m     errorclass = InternalError \u001b[38;5;28;01mif\u001b[39;00m errno < \u001b[32m1000\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m OperationalError\n\u001b[32m--> \u001b[39m\u001b[32m150\u001b[39m \u001b[38;5;28;01mraise\u001b[39;00m errorclass(errno, errval)\n",
+      "\u001b[31mProgrammingError\u001b[39m: (1007, \"Can't create database 'employee_project'; database exists\")"
+     ]
+    }
+   ],
    "source": [
-    "import pymysql\n",
-    "conn=pymysql.connect(user='root',host='localhost',password='Priya@123')\n",
-    "qur='CREATE DATABASE employee_project'\n",
-    "mycur=conn.cursor()\n",
-    "mycur.execute(qur)\n",
-    "mycur.close()\n",
-    "conn.close()"
+    "#import pymysql\n",
+    "#conn=pymysql.connect(user='root',host='localhost',password='Priya@123')\n",
+    "#qur='CREATE DATABASE employee_project'\n",
+    "#mycur=conn.cursor()\n",
+    "#mycur.execute(qur)\n",
+    "#mycur.close()\n",
+    "#conn.close()\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "8e480143",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create table"
+    "# create table\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "3d45d3a2",
+   "execution_count": null,
+   "id": "646d724b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pymysql\n",
-    "conn=pymysql.connect(user='root',host='localhost',password='Priya@123',database='employee_project')\n",
+    "#import pymysql\n",
+    "conn=pymysql.connect(user='root',host='localhost',password='Priya@123',database='emp_project')\n",
     "qur='''CREATE TABLE emp (\n",
     "    emp_id VARCHAR(10) PRIMARY KEY,\n",
     "    emp_name VARCHAR(100),\n",
@@ -77,12 +98,13 @@
     "mycur=conn.cursor()\n",
     "mycur.execute(qur)\n",
     "mycur.close()\n",
-    "conn.close()\n"
+    "conn.close()\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "8f6f00d8",
    "metadata": {},
    "outputs": [],
@@ -92,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "224613ac",
    "metadata": {},
    "outputs": [],
@@ -135,23 +157,96 @@
     "   \n",
     "\n",
     "def show():\n",
-    "    pass\n",
+    "        conn=pymysql.connect(user='root',host='localhost',password='Priya@123',database='employee_project')\n",
+    "        qur='SELECT * FROM emp'\n",
+    "        mycur=conn.cursor()\n",
+    "        mycur.execute(qur)\n",
+    "        tup1=mycur.fetchall()\n",
+    "        for i in tup1:\n",
+    "             treev.insert('',END,values=(i[0],i[1],i[2],i[3],i[4]))\n",
+    "        mycur.close()\n",
+    "        conn.close()\n",
     "\n",
     "def salary():\n",
     "    pass\n",
     "\n",
     "\n",
     "def delete():\n",
-    "    pass\n",
+    "        del_data=var1.get()\n",
+    "        if del_data.strip()=='':\n",
+    "               messagebox.showinfo('info','All fields are compulsory')\n",
+    "        else:\n",
+    "          conn=pymysql.connect(user='root',host='localhost',password='Priya@123',database='employee_project')\n",
+    "          qur=f'DELETE FROM emp WHERE emp_id=\"{del_data.strip()}\"'\n",
+    "          mycur=conn.cursor()\n",
+    "          mycur.execute(qur)\n",
+    "          conn.commit()\n",
+    "          mycur.close()\n",
+    "          conn.close()\n",
+    "          messagebox.showinfo('info',f'Data of {del_data} ID is deleted successfully')\n",
+    "          treev.delete(*treev.get_children())\n",
+    "          conn=pymysql.connect(user='root',host='localhost',password='Priya@123',database='employee_project')\n",
+    "          qur='SELECT * FROM emp'\n",
+    "          mycur=conn.cursor()\n",
+    "          mycur.execute(qur)\n",
+    "          tup1=mycur.fetchall()\n",
+    "          for i in tup1:\n",
+    "              treev.insert('',END,values=(i[0],i[1],i[2],i[3],i[4]))\n",
+    "        mycur.close()\n",
+    "        conn.close()\n",
+    "\n",
     "\n",
     "def select():\n",
-    "    pass\n",
+    "     up_data=var2.get()\n",
+    "     if up_data.strip()=='':\n",
+    "               messagebox.showinfo('info','All fields are compulsory')\n",
+    "     else:\n",
+    "          conn=pymysql.connect(user='root',host='localhost',password='Priya@123',database='employee_project')\n",
+    "          qur=f'SELECT * FROM emp WHERE  emp_id=\"{up_data.strip()}\"'\n",
+    "          mycur=conn.cursor()\n",
+    "          mycur.execute(qur)\n",
+    "          tup2=mycur.fetchone()\n",
+    "          e1.insert(0,tup2[0])\n",
+    "          e2.insert(0,tup2[1])\n",
+    "          e3.insert(0,tup2[2])\n",
+    "          e4.delete(0,END)\n",
+    "          e4.insert(0,tup2[3])\n",
+    "          e5.insert(0,tup2[4])\n",
+    "          mycur.close()\n",
+    "          conn.close()\n",
+    "          \n",
     "\n",
     "def update():\n",
-    "    pass\n",
+    "    emp_id=id1.get()\n",
+    "    emp_name=n1.get()\n",
+    "    mob_no=m1.get()\n",
+    "    dept=d1.get()\n",
+    "    emp_salary=s1.get()\n",
+    "    if emp_id==''  or emp_name==''    or  mob_no=='' or  dept==''  or emp_salary=='':\n",
+    "        messagebox.showinfo('info','All fields are compulsory')\n",
+    "    else:\n",
+    "          conn=pymysql.connect(user='root',host='localhost',password='Priya@123',database='employee_project')\n",
+    "          qur=f'''\n",
+    "           UPDATE emp SET emp_id=\"{emp_id}\",emp_name=\"{emp_name}\", mob_no=\"{mob_no}\", dept=\"{dept}\",\n",
+    "           emp_salary=\"{emp_salary}\" WHERE emp_id=\"{emp_id}\"\n",
+    "          '''\n",
+    "          mycur=conn.cursor()\n",
+    "          mycur.execute(qur)\n",
+    "          conn.commit()\n",
+    "          mycur.close()\n",
+    "          conn.close()\n",
+    "          messagebox.showinfo('info',f'Data of {emp_id}ID is updated successfully')\n",
+    "          id1.set('')\n",
+    "          n1.set('')\n",
+    "          m1.set('')\n",
+    "          d1.set('')\n",
+    "          s1.set('')\n",
+    "\n",
     "\n",
     "def clear():\n",
-    "    pass\n",
+    "     treev.delete(*treev.get_children())\n",
+    "\n",
+    "    \n",
     "\n",
     "# main lebel \n",
     "\n",
@@ -358,6 +453,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5d1f8335",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "edafd79c",
    "metadata": {},
    "outputs": [],
    "source": []
